html layout update

--- a/index.html
+++ b/index.html
@@ -11,6 +11,59 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section id="top-banner">
+        <div>
+            <h1>We Need Your Help To Help Others, Who Really Need It</h1>
+            <p>We Help Thousands of People Who really Need. You Contibution Helps to Make It Happen. Let's Come To Show You haumanity.</p>
+            <a href="http://#">Donate Now</a>
+        </div>
+    </section>
+    <section id="donation-amount">
+        <div>
+            <h1>Let Make it Happen</h1>
+            <p>Please Choose You Donated Amount below. Each Donation Will Help Someone To Fill Their Needs.</p>
+            <li>100TK</li>
+            <li>200TK</li>
+            <li>500TK</li>
+            <li>1000TK</li>
+            <li>5000TK</li>
+            <form action="">
+                <input type="text" name="amount" value="Other Amount (Taka)"><br>
+                <input type="submit" value="Donate Now">
+            </form>
+        </div>
+    </section>
+    <section id="donation-plan">
+        <div>
+            <h1>Our Donation Plan</h1>
+            <p>We Offer Donation For variety of Need. You can Check them Below</p>
+        </div>
+        <div>
+            <img src="icons/food.png" alt="">
+            <h1>Food For a Family</h1>
+            <p>We Offer Food for a family.We Offer Food for a family.We Offer Food for a family.We Offer Food for a family.</p>
+        </div>
+        <div>
+            <img src="icons/shelter.png" alt="">
+            <h1>Shelter For a Family</h1>
+            <p>We Offer Shelter for a Family.We Offer Shelter for a Family.We Offer Shelter for a Family.We Offer Shelter for a Family.</p>
+        </div>
+        <div>
+            <img src="icons/Frame-1.png" alt="">
+            <h1>Education For a Childrean</h1>
+            <p>We help Childrean for Education.We help Childrean for Education.We help Childrean for Education.We help Childrean for Education.</p>
+        </div>
+    </section>
+    <section id="subscription">
+        <div>
+        <h1>Stay Updated</h1>
+        <p>Subscribe Below to Stay updated with US for Event & Donations.</p>
+        <form action="">
+            <input type="text" name="mail" value="Email">
+            <input type="submit" value="Subscribe">
+        </form>
+        </div>
+    </section>
     
 </body>
 </html>
