updated html layout

--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
             <p>We help Childrean for Education.We help Childrean for Education.We help Childrean for Education.We help Childrean for Education.</p>
         </div>
     </section>
+    <section id="volunteer">
+        <div>
+            <img src="images/volunteers.jpg" alt="">
+        </div>
+        <div>
+            <h1>Volunteer with us</h1>
+            <p>Check out our list of volunteer positions with our programs — including virtual opportunities to get involved.</p>
+            <a href="http://#">Learn More About Volunteering</a>
+        </div>
+    </section>
+
+    <section id="gallery">
+        <div>
+            <h1>Our Recent Charity Gallery</h1>
+            <img src="images/donation0.jpg" alt="">
+            <img src="images/donation1.jpg" alt="">
+            <img src="images/donation10.jpg" alt="">
+            <img src="images/donation11.jpg" alt="">
+        </div>
+
+    </section>
+
     <section id="subscription">
         <div>
         <h1>Stay Updated</h1>
@@ -63,6 +85,13 @@
             <input type="submit" value="Subscribe">
         </form>
         </div>
+    </section>
+    <section id="footer">
+        <div>
+            <h1>Being Humain</h1>
+            <p>Togather We Will Make It Happen</p>
+        </div>
+
     </section>
     
 </body>
