gallery section update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section id="top-banner">
-        <div>
+        <div class="banner-texts">
             <h1>We Need Your Help To Help Others, Who Really Need It</h1>
             <p>We Help Thousands of People Who really Need. You Contibution Helps to Make It Happen. Let's Come To Show You haumanity.</p>
             <a href="http://#">Donate Now</a>
@@ -22,11 +22,11 @@
         <div>
             <h1>Let Make it Happen</h1>
             <p>Please Choose You Donated Amount below. Each Donation Will Help Someone To Fill Their Needs.</p>
-            <li>100TK</li>
+            <ul class="choose-amount"><li>100TK</li>
             <li>200TK</li>
             <li>500TK</li>
             <li>1000TK</li>
-            <li>5000TK</li>
+            <li>5000TK</li></ul>
             <form action="">
                 <input type="text" name="amount" value="Other Amount (Taka)"><br>
                 <input type="submit" value="Donate Now">
@@ -38,40 +38,43 @@
             <h1>Our Donation Plan</h1>
             <p>We Offer Donation For variety of Need. You can Check them Below</p>
         </div>
-        <div>
+        <div class="donation-plan-list">
+        <div class="family-plan">
             <img src="icons/food.png" alt="">
             <h1>Food For a Family</h1>
             <p>We Offer Food for a family.We Offer Food for a family.We Offer Food for a family.We Offer Food for a family.</p>
         </div>
-        <div>
+        <div class="shelter-plan">
             <img src="icons/shelter.png" alt="">
             <h1>Shelter For a Family</h1>
             <p>We Offer Shelter for a Family.We Offer Shelter for a Family.We Offer Shelter for a Family.We Offer Shelter for a Family.</p>
         </div>
-        <div>
+        <div class="education-plan">
             <img src="icons/Frame-1.png" alt="">
             <h1>Education For a Childrean</h1>
             <p>We help Childrean for Education.We help Childrean for Education.We help Childrean for Education.We help Childrean for Education.</p>
         </div>
+    </div>
     </section>
     <section id="volunteer">
-        <div>
-            <img src="images/volunteers.jpg" alt="">
-        </div>
-        <div>
+        <div class="half-width">
             <h1>Volunteer with us</h1>
             <p>Check out our list of volunteer positions with our programs — including virtual opportunities to get involved.</p>
             <a href="http://#">Learn More About Volunteering</a>
+        </div>
+        <div class="half-width">
+            <img src="images/volunteers.jpg" alt="">
         </div>
     </section>
 
     <section id="gallery">
         <div>
             <h1>Our Recent Charity Gallery</h1>
-            <img src="images/donation0.jpg" alt="">
+            <div class="gallery-images"><img src="images/donation0.jpg" alt="">
             <img src="images/donation1.jpg" alt="">
             <img src="images/donation10.jpg" alt="">
             <img src="images/donation11.jpg" alt="">
+        </div>
         </div>
 
     </section>
