--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <section id="top-banner">
         <div class="banner-texts">
             <h1>We Need Your Help To Help Others, Who Really Need It</h1>
             <p>We Help Thousands of People Who really Need. You Contibution Helps to Make It Happen. Let's Come To Show You haumanity.</p>
+        </div>
+        <div class="top-donate-btn">
             <a href="http://#">Donate Now</a>
         </div>
     </section>
+
     <section id="donation-amount">
         <div class="donation-amount-content">
-            <h1>Let Make it Happen</h1>
+            <h1>Let's Make it Happen</h1>
             <p>Please Choose You Donated Amount below. Each Donation Will Help Someone To Fill Their Needs.</p>
             <div class="choose-amount">
                 <div>100Tk</div>
@@ -35,6 +39,7 @@
             </form>
         </div>
     </section>
+
     <section id="donation-plan">
         <div class="plan-content">
             <h1>Our Donation Plan</h1>
@@ -44,20 +49,21 @@
         <div class="family-plan">
             <img src="icons/food.png" alt="">
             <h1>Food For a Family</h1>
-            <p>We Offer Food for a family.We Offer Food for a family.We Offer Food for a family.We Offer Food for a family.</p>
+            <p>By choosing this plan you will donate for a family food each Month. The donated amount will go to the family account directly.</p>
         </div>
         <div class="shelter-plan">
             <img src="icons/shelter.png" alt="">
             <h1>Shelter For a Family</h1>
-            <p>We Offer Shelter for a Family.We Offer Shelter for a Family.We Offer Shelter for a Family.We Offer Shelter for a Family.</p>
+            <p>We Offer Shelter for a Family.You can choose this plan to donate a fixed amount each month for a family shelter, who is Homeless.</p>
         </div>
         <div class="education-plan">
             <img src="icons/Frame-1.png" alt="">
             <h1>Education For a Childrean</h1>
-            <p>We help Childrean for Education.We help Childrean for Education.We help Childrean for Education.We help Childrean for Education.</p>
+            <p>By choosing this plan you can adopt a Childrean by providing Education. You small donation will help a child to go to school. Let's do now</p>
         </div>
     </div>
     </section>
+
     <section id="volunteer">
         <div class="half-width">
             <h1>Volunteer with us</h1>
@@ -78,7 +84,6 @@
             <img src="images/donation11.jpg" alt="">
         </div>
         </div>
-
     </section>
 
     <section id="subscription">
@@ -91,13 +96,12 @@
         </form>
         </div>
     </section>
+
     <section id="footer">
         <div>
-            <h1>Being Humain</h1>
+            <h1>Being Human</h1>
             <p>Togather We Will Make It Happen</p>
         </div>
-
     </section>
-    
 </body>
 </html>
